src/main/java/com/example/payment/errors/InvalidLoginException.java
package com.example.payment.errors;

public class InvalidLoginException extends Exception{
    public InvalidLoginException(String message) {
        super(message);
    }
}
